fix whitespace at bottom

--- a/css/style.css
+++ b/css/style.css
@@ -158,9 +158,7 @@ header .intro-text {
 	padding-bottom: 200px;
 }
 /* Portfolio Section */
-#portfolio {
-	padding: 40px 0 100px 0;
-}
+
 .categories {
 	margin-bottom: 80px;
 }
